@@ -493,7 +493,8 @@ Cleanup_File:
 				num_written = (size_t)nw;
 				UpnpPrintf(UPNP_INFO, HTTP, __FILE__, __LINE__,
 					   ">>> (SENT) >>>\n"
-					   "%.*s\nbuf_length=%zd, num_written=%zd\n""------------\n",
+					   "%.*s\nbuf_length=%" PRIzd ", num_written=%" PRIzd "\n"
+					   "------------\n",
 					   (int)buf_length, buf, buf_length, num_written);
 				if (num_written != buf_length) {
 					RetVal = 0;
